infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  replicas: 1
  # Step 1/2: Tell deployment how to find pods to create
  selector:
    matchLabels:
      app: expiration
  # How to create each pod
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: torressam/expiration
