infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  # Step 1/2: Tell deployment how to find pods to create
  selector:
    matchLabels:
      app: auth
  # How to create each pod
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: torressam/auth
---
# Kubernates service to go with above pod
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    # Find all pods with label of app:auth
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
