infra/k8s/expiration-redis.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  replicas: 1
  # Step 1/2: Tell deployment how to find pods to create
  selector:
    matchLabels:
      app: expiration-redis
  # How to create each pod
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          image: redis #official redis image from Docker hub
---
# Kubernates cluster i[ ]service to connect with above pod when created
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  selector:
    # Find all pods with label of app:auth-mongo
    app: expiration-redis
  ports:
    - name: cache
      protocol: TCP
      port: 6379
      targetPort: 6379 # Default redis port
