infra/k8s/tickethub-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickethub-client-depl
spec:
  replicas: 1
  # Add selector so depl can find which pods to create
  selector:
    matchLabels:
      app: tickethub-client
  # Pod creation details
  template:
    metadata:
      labels:
        app: tickethub-client
    spec:
      containers:
        - name: tickethub-client
          image: torressam/tickethub-client
---
# K8's complimentary tickethub-client service
apiVersion: v1
kind: Service
metadata:
  name: tickethub-client-srv
spec:
  selector:
    # Find matching pods by selector
    app: tickethub-client
  ports:
    - name: tickethub-client
      protocol: TCP
      port: 3000
      targetPort: 3000
